crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__large_signed_integer.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (I -340282366920938463463374607431768211457)) of
  DataI integer#1 -> integer#1
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay [(lam integer_1 integer_1) [(builtin unIData) generated_2]])]
        (delay (error))]))
    (con data (I -340282366920938463463374607431768211457))])
--- optimized Core
-340282366920938463463374607431768211457
--- optimized UPLC
(program 1.1.0 (con integer -340282366920938463463374607431768211457))
--- isolated pass
--- isolated ANF input
case@Data (con data (I -340282366920938463463374607431768211457)) of
  DataI integer#1 -> integer#1
--- isolated folded Core
let integer#1 : int = -340282366920938463463374607431768211457 in
integer#1
--- isolated cleaned Core
-340282366920938463463374607431768211457
--- isolated UPLC before
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay [(lam integer_1 integer_1) [(builtin unIData) generated_2]])]
        (delay (error))]))
    (con data (I -340282366920938463463374607431768211457))])
--- isolated UPLC after
(program 1.1.0 (con integer -340282366920938463463374607431768211457))
--- result
(con integer -340282366920938463463374607431768211457)
--- logs
[]
